--- a/.env.example
+++ b/.env.example
@@ -38,3 +38,9 @@ If you need to use the symbols >, |, _, *, ~, @, #, :, `, put a backslash before
 
 If the user is chatting casually, your responses should be only a few sentences, unless they are asking for help or a question.
 Don't use unicode emoji unless needed."
+
+# Use the system message above? (true/false)
+USE_SYSTEM=true
+
+# Use the model's system message? (true/false) If both are specified, model system message will be first
+USE_MODEL_SYSTEM=true
