Created text attachments handler (#40)

--- a/.env.example
+++ b/.env.example
@@ -44,3 +44,6 @@ USE_SYSTEM=true
 
 # Use the model's system message? (true/false) If both are specified, model system message will be first
 USE_MODEL_SYSTEM=true
+
+# Maximum number of attachments to send to the model
+MAX_ATTACHMENTS=3
