--- a/.env.example
+++ b/.env.example
@@ -45,5 +45,5 @@ USE_SYSTEM=true
 # Use the model's system message? (true/false) If both are specified, model system message will be first
 USE_MODEL_SYSTEM=true
 
-# Maximum number of attachments to send to the model
+# Maximum number of attachments to send to the model (txt, pdf, images)
 MAX_ATTACHMENTS=3
