--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "axios": "^1.7.9",
     "discord.js": "^14.14.1",
     "dotenv": "^16.4.5",
-    "meklog": "^1.0.2"
+    "meklog": "^1.0.2",
+    "pdf-parse": "^1.1.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.20.0",
@@ -34,6 +35,7 @@
     "@types/eslint__js": "^8.42.3",
     "@types/jest": "^29.5.14",
     "@types/node": "^20.11.24",
+    "@types/pdf-parse": "^1.1.1",
     "eslint": "^9.20.1",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.3",
