--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,19 @@
 version: "3"
 
 services:
-    bot:
-        build: .
-        env_file: .env
-        environment:
-            - OLLAMA=http://host.docker.internal:11434
-        restart: unless-stopped
+  bot:
+    build: .
+    env_file: .env
+    environment:
+      - OLLAMA=http://host.docker.internal:11434
+      - STABLE_DIFFUSION=http://host.docker.internal:7860
+      - NODE_ENV=production
+    restart: unless-stopped
+    volumes:
+      - ./logs:/app/logs
+    networks:
+      - ai-network
+
+networks:
+  ai-network:
+    driver: bridge
