Added GitHub workflows (#45)

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node dist/index.js",
     "build": "tsc",
     "dev": "ts-node src/index.ts",
-    "test": "npm run test:lint && npm run test:prettier && npm run test:jest",
+    "test": "npm run test:tsc && npm run test:lint && npm run test:prettier && npm run test:jest",
+    "test:tsc": "tsc --noEmit",
     "test:lint": "eslint src",
     "test:prettier": "prettier --check src",
     "test:jest": "jest",
