--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
-package-lock.json
-pnpm-lock.yaml
-pnpm-lock.yml
 node_modules/
+__pycache__/
+*.py[cod]
+*$py.class
 .env
-.vscode/
+.venv
+.vscode
